--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,10 @@
   }
 }
 
+.funil{
+  text-align:center;
+}
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
@@ -676,7 +680,7 @@ progress {
   width: 100%;
 }
 .telaLogin{
-  
+    position: relative;
     margin-left: auto;
     margin-right: auto;
     margin-top: 5%;
