--- a/css/styles.css
+++ b/css/styles.css
@@ -322,9 +322,10 @@ figure {
   margin: 0 0 1rem;
 }
 
-img,
-svg {
-  vertical-align: middle;
+img, svg {
+  max-width: 100%;
+  height: 100px;
+  object-fit: contain;
 }
 
 table {
