--- a/css/styles.css
+++ b/css/styles.css
@@ -804,15 +804,13 @@ progress {
 .blockquote > :last-child {
   margin-bottom: 0;
 }
-.footeer{
-  width: 100%;
-  height: 50px;
-  margin: auto;
+.footer{
+  margin-top: 50px;
+  position: relative;
   bottom: 0;
-    position: fixed;
-    bottom: 0;
+  width: 100%;
+  line-height: 100px;
 }
-
 
 .blockquote-footer {
   margin-top: -1rem;
@@ -866,9 +864,11 @@ progress {
   margin-left: auto;
 }
 .rodape{
-  position: fixed;
+  margin-top: 38px;
+  position: relative;
   bottom:0;
   width: 100%;
+  
 }
 .telaLogin{
     position: relative;
@@ -2395,6 +2395,21 @@ progress {
   margin-bottom: 0.5rem;
 }
 
+.formulario{
+  margin-top:40px;
+  
+}
+.fieldset{
+  width:900px;
+  height:586px;
+  margin-left: auto;
+  margin-right:auto; 
+  
+}
+.form_margin{
+  margin-left: 30px;
+}
+
 .col-form-label {
   padding-top: calc(0.375rem + 1px);
   padding-bottom: calc(0.375rem + 1px);
@@ -3265,8 +3280,14 @@ textarea.form-control-lg {
 .btn-primary {
   color: #fff;
   background-color: #0d6efd;
-  
 }
+
+.btn-primarycad {
+  color: #fff;
+  background-color: #0d6efd;
+  margin-top: 15px;
+}
+
 .btn-primary:hover {
   color: #fff;
   background-color: #0b5ed7;
@@ -3383,9 +3404,11 @@ textarea.form-control-lg {
 }
 
 .btn-warning {
-  color: #000;
-  background-color: #ffc107;
+  color: rgb(255, 255, 255);
+  background-color: #ffa807;
   border-color: #ffc107;
+  margin-left: 30px;
+  margin-top: 15px;
 }
 .btn-warning:hover {
   color: #000;
@@ -3416,6 +3439,8 @@ textarea.form-control-lg {
   color: #fff;
   background-color: #dc3545;
   border-color: #dc3545;
+  margin-left: 30px;
+  margin-top: 15px;
 }
 .btn-danger:hover {
   color: #fff;
@@ -7565,7 +7590,8 @@ textarea.form-control-lg {
 }
 
 .mt-auto {
-  margin-top: auto !important;
+  margin-top: auto ;
+  
 }
 
 .me-0 {
