--- a/css/styles.css
+++ b/css/styles.css
@@ -3298,6 +3298,7 @@ textarea.form-control-lg {
   margin-left: 10px;
 }
 
+
 .btn-primarycad {
   color: #fff;
   background-color: #0d6efd;
@@ -3721,7 +3722,11 @@ textarea.form-control-lg {
 .btn-outline-dark {
   color: #212529;
   border-color: #212529;
-  
+}
+.btn-outline-dark-busca {
+  color: #212529;
+  border-color: #212529;
+  margin-left: 7px;
 }
 .btn-outline-dark-logoff {
   color: #212529;
@@ -3739,7 +3744,11 @@ textarea.form-control-lg {
   background-color: #212529;
   border-color: #212529;
 }
-
+.btn-outline-dark-busca:hover {
+  color: #fff;
+  background-color: #212529;
+  border-color: #212529;
+}
 
 .btn-outline-dark:hover {
   color: #fff;
